@@ -11,6 +11,10 @@ Major changes since man-db 2.5.5:
 	  requested section name. In some cases this could confuse mandb
 	  into never believing that the database was up to date.
 
+	o Fix handling of pages with comma-separated names ("foo, bar,
+	  baz") in their NAME sections, broken by a change in 2.5.0 (!)
+	  to ignore manual page names containing spaces.
+
 	Improvements:
 	-------------
 
