@@ -1,3 +1,10 @@
+Mon Jun 22 08:02:55 BST 2009  Colin Watson  <cjwatson@debian.org>
+
+	* src/descriptions.c (parse_descriptions): Strip leading and
+	  trailing whitespace from name tokens before checking whether they
+	  contain whitespace.
+	* docs/NEWS: Document this.
+
 Sun Jun 21 02:55:56 BST 2009  Colin Watson  <cjwatson@debian.org>
 
 	* docs/NEWS: Document previous change.
